<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gprice</string>
    <string name="about">À propos</string>
    <string name="required_connexion_title">Connexion requise</string>
    <string name="required_connexion_body">Vous êtes en mode hors connexion.</string>
    <string name="required_connexion_cancel">Annuler</string>
    <string name="required_connexion_retry">Réessayer</string>
    <string name="exit">Quiter</string>
    <string name="loading">Chargement en cours ...</string>
    <string name="del_confird">Est vous sure de vouloir supprimer</string>
    <string name="action_search">recherche</string>
    <string name="app_market_url">market://details?id=fadcorp.mprice</string>
    <string name="version_button_label">V %1$s</string>
    <string name="error_field_empty">Champs requis</string>
    <string name="menu_settings">Configuration</string>
    <string name="device_prompt">Devises</string>
    <string-array name = "settings_money_type">
        <item>Fcfa</item>
        <item>Euro</item>
        <item>Dollar</item>
        <item>Yen</item>
    </string-array>
    <string-array name = "settings_money_type_value">
        <item>Fcfa</item>
        <item>Euro</item>
        <item>Dollar</item>
        <item>Yen</item>
    </string-array>
    <string name="theme_prompt">Themes</string>
    <string-array name = "settings_theme">
        <item>black</item>
        <item>white</item>
    </string-array>
    <string name="action_settings">Configuration</string>
    <string name="manage_db">Gestion base de données</string>
    <string name="default_devise">Fcfa</string>
    <string name="rest_database">Suppression des données.</string>
    <string name="rest_confermed">"Êtes-vous certain?"</string>
    <string name="advanced">Paramètres avancés</string>
    <string name="summary_reset_db">Appui %d fois pour supprimer la base de données.</string>
    <string name="action_convert">Devises</string>
    <string name="msgBegin">Ajouter un article pour commencer</string>
    <string name="importOk" formatted="false">%s a été importée avec succès depuis \n %s</string>
    <string name="exportOk" formatted="false">%s a été exportée avec succès sur \n %s</string>
    <string name="delDB">%s a été supprimée avec succès.</string>
    <string name="scanne_bar_code">Scanner le code barre</string>
    <string name="exit_confirmed">Voulez vous vraiment quitter ?</string>
    <string name="succes_deleted">%s a été suprimé avec succès</string>
    <string name="ok">OK</string>
    <string name="update">METTRE À JOUR</string>
    <string name="saveAndNex">OK ET NOUVEAU</string>
    <string name="default_theme">black</string>
</resources>