<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <PreferenceCategory android:title="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditTextPreference
            android:title="Mot de passe"
            android:summary="Mot de passe"
            android:singleLine="true"
            android:key="password"
            android:inputType="textPassword" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/device_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ListPreference android:key="moneyType"
            android:title="Choix de devise"
            android:defaultValue="@string/default_devise"
            android:entries="@array/settings_money_type"
            android:entryValues="@array/settings_money_type_value">
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/theme_prompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
        <ListPreference android:key="theme"
                        android:title="theme"
                        android:defaultValue="@string/default_theme"
                        android:entries="@array/settings_theme"
                        android:entryValues="@array/settings_theme">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/manage_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Preference android:title="Export"
            android:key="exportDB"
            android:summary="Exporter la base de données"/>
        <Preference android:title="Import"
            android:key="importDB"
            android:summary="Importer la base de données"/>
        <Preference android:title="@string/rest_database"
            android:key="restDB"
            android:summary="@string/summary_reset_db"/>
    </PreferenceCategory>
</PreferenceScreen>
