<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Home" >
    <item android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/convert_devise"
        android:title="@string/action_convert"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <!-- <item android:id="@+id/action_scanne"
        android:title="Scanner"
        android:orderInCategory="100"
        app:showAsAction="never" /> -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
